ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-website-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: guestbook-api-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ha-website-service
            port:
              number: 80
